front-end/src/components/UI/modeButton/mode-button.css
@import url("margin-padding");
@import url("flex-grid");
@import url("misc");

.mode-button {
  height: 50px;
  width: 50px;
  position: absolute;
  top: 0;
  right: 0;
  z-index: 100;
  background-color: var(--color-bg-2);
  border-radius: 0 0 0 100%;
  overflow: hidden;

  @media (width >= 1440px) {
    left: 1536px;
  }

  & label {
    @extend %flex,
      %align-center,
      %justify-content-center,
      %pointer,
      %pb-0.5,
      %pl-0.5,
      %select-none;

    height: inherit;
    width: inherit;

    & > .icons {
      & > span {
        & > svg {
          transition: transform 0.5s ease-in-out;
          height: 32px;
          width: 32px;

          & > path {
            transition: transform 0.2s ease-in-out;
            fill: var(--color-fg-2);
          }
        }

        &#light-icon {
          & > svg {
            & > path:nth-of-type(2) {
              fill: var(--color-bg-2);
            }
          }
        }
      }
    }

    &:hover {
      & > .icons {
        & > span {
          &#light-icon {
            & > svg {
              transform: rotate(360deg);
            }
          }

          &#dark-icon {
            & > svg {
              & > path {
                &:nth-of-type(3) {
                  transform: translate(0, 1px);
                }

                &:nth-of-type(1) {
                  transform: translate(0, -2px);
                }

                &:nth-of-type(2) {
                  transform: translate(0, 1px);
                }

                &:nth-of-type(4) {
                  transform: translate(0, -5px);
                }
              }
            }
          }
        }
      }
    }
  }
}

